# avatar

./: .dockerignore  .gitignore  AGENTS.md
.github/: copilot-instructions.md
.github/prompts/: plan-digitalAvatarClone.prompt.md
client/: pyproject.toml  test_llm_client.py  test_ws.py
client/src/: chat_client.py  connectivity_test.py  face_voice_client.py  latency_test.py  orchestrator.py  tts_test.py  voice_client.py
client/src/asr/: smart_turn.py  transcriber.py
client/src/audio/: playback.py
client/src/video/: display.py
docker/: .dockerignore  Dockerfile  Dockerfile.stage2  build.sh  deploy_vastai.sh  entrypoint_stage2.sh  supervisord.conf
scripts/: deploy_face.py  deploy_stage2.py  deploy_tts.py  record_voice.py  setup_face.py  setup_voice.py  update_tts_compile.sh
server/: pyproject.toml
server/src/: main.py
server/src/api/: server.py
server/src/face/: client.py  face_server.py
server/src/llm/: chunker.py  client.py  system_prompt.txt
server/src/tts/: client.py
