[project]
name = "avatar-client"
version = "0.1.0"
description = "Avatar client — local orchestrator, ASR, virtual camera/mic (Windows)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.27,<1",
    "msgpack>=1.0,<2",
    "numpy>=1.26,<3",
    "ormsgpack>=1.5,<2",
    "sounddevice>=0.5,<1",
    "websockets>=13,<17",
]
