[project]
name = "avatar-client"
version = "0.1.0"
description = "Avatar client — local orchestrator, ASR, virtual camera/mic (Windows)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.27,<1",
    "huggingface-hub>=0.23,<1",
    "moonshine-voice>=0.0.49,<1",
    "msgpack>=1.0,<2",
    "numpy>=1.26,<3",
    "onnxruntime>=1.17,<2",
    "ormsgpack>=1.5,<2",
    "sounddevice>=0.5,<1",
    "transformers>=4.40,<5",
    "websockets>=13,<17",
]
