[project]
name = "avatar-server"
version = "0.1.0"
description = "Avatar server — LLM, TTS, face animation on Vast.ai (RTX 4090)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "msgpack>=1.0,<2",
    "ormsgpack>=1.5,<2",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=13,<17",
]
